--- a/application/admin/view/site/articleadd.html
+++ b/application/admin/view/site/articleadd.html
@@ -1,261 +1,150 @@
 {include file="public/header" /}
+<section class="layui-larry-box">
+	<div class="larry-personal">
+		<div class="layui-tab">
+			<blockquote class="layui-elem-quote news_search">
+				<!--<div class="layui-inline">
+					<div class="layui-input-inline">
+						<input value="" placeholder="请输入关键字" class="layui-input search_input" type="text">
+					</div>
+					<a class="layui-btn search_btn">查询</a>
+				</div>-->
+				<input type="hidden" id="type" value="{$type}">
+				<div class="layui-inline">
+					<a href="{:url('site/index')}" id="edit" class="layui-btn" style="background-color:#5FB878"><返回文章</a>
+				</div>
+				{if condition="in_array('site/articleaddall',$operable)"}
+					<div class="layui-inline">
+						<a data-url="{:url('site/articleaddall')}" class="layui-btn layui-btn-normal newsAdd_btn">批量添加</a>
+					</div>
+				{/if}
+					
+			</blockquote>
 
+			<!-- 操作日志 -->
+			<div class="layui-form news_list">
+				<table class="layui-table">
+					<thead>
+						<tr>
+							<th>
+								<input id="check" type="checkbox" style="display: block;">
+							</th>
+							<th>标题</th>
+							<th>封面图</th>
+							<th>简介</th>
+							<th>发布时间</th>
+							<th>是否已存在</th>
+						</tr>
+					</thead>
+					<tbody class="news_content" id="table">
+						{volist name="article['data']" id="vo"}
+							<tr>
+								<td>
+									{if condition="$vo['is_be'] eq 0"}
+										<input name="check" type="checkbox" value="{$vo.title}" style="display: block;">
+									{/if}
+								</td>
+								<td>{$vo.title}</td>
+								<td>
+									{if condition="$vo.thumb_url"}
+										<img src="{$vo.thumb_url}" style="width: 50px;height: 50px;" />
+									{else/}
+										无图
+									{/if}
+								</td>
+								<td style="width: 40%;">
+									<div style="width: 100%;height: 50px;overflow: auto;">
+										{$vo.digest}
+									</div>
+								</td>
+								<td>
+									<span>{$vo.create_time|date='Y-m-d H:i:s',###}</span>
+								</td>
+								<td>
+									<span>
+										{if condition="$vo['is_be'] eq 1"}
+											是
+										{else/}
+											否
+										{/if}
+									</span>
+								</td>
+							</tr>
+						{/volist}
+					</tbody>
+				</table>
+				<div style="text-align: right;">
+					{$article.page}
+				</div>
+			</div>
 
-<fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-	<legend>
-		<div class="layui-inline">
-			<a href="{:url('site/index')}" class="layui-btn layui-btn-normal">返回列表</a>
-		</div>
-	</legend>
-</fieldset>
-
-<form class="layui-form" id="form">
-	<div class="layui-form-item">
-		<label class="layui-form-label">标题:</label>
-		<div class="layui-input-block" style="width: 50%;">
-			<input type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入文章标题" class="layui-input">
-		</div>
-		<div class="layui-form-mid layui-word-aux">最多255字符,每个中文占3字符</div>
-	</div>
-	
-	<div class="layui-form-item">
-		<label class="layui-form-label">封面图:</label>
-		<div class="layui-input-block" style="width: 50%;">
-			<img id="cover" style="width: 70px;height: 70px;" src="__STYLE__/img/upload.png" />
-			<input id="img" type="file" accept="image/gif, image/jpeg, image/png, image/jpg" style="display: none;" name="cover" />
-		</div>
-		<label class="layui-form-label"></label>
-		<div class="layui-form-mid layui-word-aux">建议尺寸4:3,图片大小不得超过2M</div>
-	</div>
-	
-	<div class="layui-form-item">
-		<label class="layui-form-label">简介:</label>
-		<div class="layui-input-block" style="width: 50%;">
-			<textarea placeholder="请输入文章简介" name="sketch" class="layui-textarea"></textarea>
 		</div>
 	</div>
-	
-	<div class="layui-form-item">
-		<label class="layui-form-label">所属板块</label>
-		<div class="layui-input-block" style="width: 50%;">
-			<select name="type" lay-filter="aihao">
-				<option value="1">设计案例</option>
-				<option value="2">施工档案</option>
-			</select>
-		</div>
-	</div>
-	
-	
-	<div class="layui-form-item">
-		<label class="layui-form-label">文章内容</label>
-		<div class="layui-input-block" style="width: 50%;">
-			<script id="container" name="content" type="text/plain" style="height: 300px;width:600px;"></script>
-		</div>
-	</div>
-	
-	<div class="layui-form-item">
-		<div class="layui-input-block">
-			<button type="button" class="layui-btn" id="button" data-url='{:url("site/articleadd")}' data-succ='{:url("site/index")}'>立即提交</button>
-		</div>
-	</div>
-	
-</form>
-<script type="text/javascript" src="__STYLE__/js/jquery.min.js"></script>
-<!-- 配置文件 -->
-<script type="text/javascript" src="__STYLE__/js/editor/ueditor.config.js"></script>
-<!-- 编辑器源码文件 -->
-<script type="text/javascript" src="__STYLE__/js/editor/ueditor.all.js"></script>
+</section>
 {include file="public/footer" /}
-
-
 <script>
 	$(function(){
-		var ue = UE.getEditor('container', {
-            toolbars: [
-                [
-                    'anchor', //锚点
-                    'undo', //撤销
-                    'redo', //重做
-                    'bold', //加粗
-                    'indent', //首行缩进
-                    'snapscreen', //截图
-                    'italic', //斜体
-                    'underline', //下划线
-                    'strikethrough', //删除线
-                    'subscript', //下标
-                    'fontborder', //字符边框
-                    'superscript', //上标
-                    'formatmatch', //格式刷
-                    'source', //源代码
-                    'blockquote', //引用
-                    'pasteplain', //纯文本粘贴模式
-                    'selectall', //全选
-                    'print', //打印
-                    'preview', //预览
-                    'horizontal', //分隔线
-                    'removeformat', //清除格式
-                    'time', //时间
-                    'date', //日期
-                    'unlink', //取消链接
-                    'insertrow', //前插入行
-                    'insertcol', //前插入列
-                    'mergeright', //右合并单元格
-                    'mergedown', //下合并单元格
-                    'deleterow', //删除行
-                    'deletecol', //删除列
-                    'splittorows', //拆分成行
-                    'splittocols', //拆分成列
-                    'splittocells', //完全拆分单元格
-                    'deletecaption', //删除表格标题
-                    'inserttitle', //插入标题
-                    'mergecells', //合并多个单元格
-                    'deletetable', //删除表格
-                    'cleardoc', //清空文档
-                    'insertparagraphbeforetable', //"表格前插入行"
-                    'insertcode', //代码语言
-                    'fontfamily', //字体
-                    'fontsize', //字号
-                    'paragraph', //段落格式
-                    'simpleupload', //单图上传
-                    'insertimage', //多图上传
-                    'edittable', //表格属性
-                    'edittd', //单元格属性
-                    'link', //超链接
-                    'emotion', //表情
-                    'spechars', //特殊字符
-                    'searchreplace', //查询替换
-                    'map', //Baidu地图
-                    'gmap', //Google地图
-                    'insertvideo', //视频
-                    'help', //帮助
-                    'justifyleft', //居左对齐
-                    'justifyright', //居右对齐
-                    'justifycenter', //居中对齐
-                    'justifyjustify', //两端对齐
-                    'forecolor', //字体颜色
-                    'backcolor', //背景色
-                    'insertorderedlist', //有序列表
-                    'insertunorderedlist', //无序列表
-                    'fullscreen', //全屏
-                    'directionalityltr', //从左向右输入
-                    'directionalityrtl', //从右向左输入
-                    'rowspacingtop', //段前距
-                    'rowspacingbottom', //段后距
-                    'pagebreak', //分页
-                    'insertframe', //插入Iframe
-                    'imagenone', //默认
-                    'imageleft', //左浮动
-                    'imageright', //右浮动
-                    'attachment', //附件
-                    'imagecenter', //居中
-                    'wordimage', //图片转存
-                    'lineheight', //行间距
-                    'edittip ', //编辑提示
-                    'customstyle', //自定义标题
-                    'autotypeset', //自动排版
-                    'webapp', //百度应用
-                    'touppercase', //字母大写
-                    'tolowercase', //字母小写
-                    'background', //背景
-                    'template', //模板
-                    'scrawl', //涂鸦
-                    'music', //音乐
-                    'inserttable', //插入表格
-                    'drafts', // 从草稿箱加载
-                    'charts', // 图表
-                ]
-            ],
-            autoHeightEnabled: true,
-            autoFloatEnabled: true
-        });
-		
-		
-		$("#cover").click(function(){
-	 		$("#img").click();
-	 	})
-	    $('#img').change(function() { 
-	        var html = '';
-			for(var i=0;i<(this.files).length;i++){
-				var file = this.files[i]; 
-		        var r = new FileReader(); 
-		        r.readAsDataURL(file);
-		        $(r).load(function() {
-		        	$("#cover").attr('src',this.result);
-		        }) 
-			}
-	    }) 
+		//点击图片查看大图
+		$("img").click(function(){
+			var id = $(this).attr('data-id');
+			layer.photos({
+			  	photos: '#table',
+			  	anim: 5
+			});
+		})
 		
 		/**
-		 * 检测字符串所占字节长度
-		 * @param {Object} s
+		 * 多条删除
 		 */
-		function mbStringLength(s) { 
-			var totalLength = 0; 
-			var i; 
-			var charCode; 
-			for (i = 0; i < s.length; i++) { 
-				charCode = s.charCodeAt(i); 
-				if (charCode < 0x007f) { 
-					totalLength = totalLength + 1; 
-				} else if ((0x0080 <= charCode) && (charCode <= 0x07ff)) { 
-					totalLength += 2; 
-				} else if ((0x0800 <= charCode) && (charCode <= 0xffff)) { 
-					totalLength += 3; 
-				} 
-			} 
-			return totalLength; 
-		} 
-		
-		function checkForm(){
-			var title = $("input[name='title']").val();
-			var cover = $("input[name='cover']").val();
-			if(title == ''){
-				layer.msg('标题不能为空',{icon:0,time:1000});
-				return false;
-			}
-			
-			if(mbStringLength(title) > 255){
-				layer.msg('输入标题过长',{icon:0,time:1000});
-				return false;
-			}
-			
-			if(!cover){
-				layer.msg('请选择封面',{icon:0,time:1000});
-				return false;
-			}
-			
-			return true;
-		}
-		/**
-		 * ajax序列化提交表单
-		 */
-		$("#button").click(function(){
-			var succ = $(this).attr("data-succ");
+		$(".newsAdd_btn").click(function(){
+			var checkedList = new Array();   
+			$("input[name='check']:checked").each(function() {   
+			    checkedList.push($(this).val());   
+			})
+			var title = checkedList;
 			var url = $(this).attr("data-url");
-			var data = new FormData($("#form")[0]); 
-			if(checkForm()){
-				$.ajax({ 
-				    url: url, 
-				    type: 'POST', 
-				    data: data, 
-				    async: false, 
-				    cache: false, 
-				    contentType: false, 
-				    processData: false, 
-				    success: function(date) {
-				    	if(date.status == 1){
-				    		layer.msg(date['msg'], {icon: 1,time:1000});
-				    		setTimeout(function(){
-								location.href = succ;
-							},700)
-				    	}else{
-				    		layer.msg(date['msg'], {icon: 2,time:1000});
-				    	}
-				    }
-				}); 
+			var type = $('#type').val();
+			layer.open({
+				content: '您正在进行文章添加操作，是否继续?',
+				icon : 3,
+				yes: function(layero, index){
+				    $.ajax({
+						type:"post",
+						dataType:"json",
+						url:url,
+						data:{
+							title:title,
+							type:type
+						},
+						success:function(date){
+							if(date.status == 1){
+								layer.msg(date.msg,{icon:1,time:1000});
+								setTimeout(function(){
+									location.reload();
+								},400)
+							}else{
+								layer.msg(date.msg,{icon:2,time:1000});
+							}
+						}
+					});
+			  	}
+			});
+		})
+		
+		/**
+		 * 全选、全不选
+		 */
+		$("#check").click(function(){
+			var check = $(this).is(":checked");
+			if(check){
+				$('input[name="check"]').each(function(){
+                    $(this).prop("checked",true);  
+                }); 
+			}else{
+				$('input[name="check"]').each(function(){
+                    $(this).prop("checked",false);  
+                }); 
 			}
 		})
 	})
-	
-	layui.use(['form', 'layedit'], function() {});
 </script>
