--- a/application/admin/view/site/banneradd.html
+++ b/application/admin/view/site/banneradd.html
@@ -9,9 +9,12 @@
 					</div>
 					<a class="layui-btn search_btn">查询</a>
 				</div>-->
+				<div class="layui-inline">
+					<a href="{:url('site/banner')}" id="edit" class="layui-btn" style="background-color:#5FB878"><返回Banner</a>
+				</div>
 				{if condition="in_array('site/banneraddall',$operable)"}
 					<div class="layui-inline">
-						<a href="{:url('site/banneradd')}" class="layui-btn layui-btn-normal newsAdd_btn">批量添加</a>
+						<a data-href="{:url('site/banneraddall')}" class="layui-btn layui-btn-normal newsAdd_btn">批量添加</a>
 					</div>
 				{/if}
 					
@@ -62,72 +65,32 @@
 		})
 		
 		/**
-		 * 更新排序
-		 */
-		$("#edit").click(function(){
-			var index = layer.load(0, {time: 10000});
-			var url = $(this).attr("data-url");
-			var gid = $("input[name='id']");
-			var sort = $("input[name='sort']");
-			var id = '';
-			var sor = '';
-			for(var i=0;i<gid.length;i++){
-				if(i == 0){
-					id = gid.eq(i).val();
-					sor = sort.eq(i).val();
-				}else{
-					id += ','+gid.eq(i).val();
-					sor += ','+sort.eq(i).val();
-				}
-			}
-			$.ajax({
-				type:"post",
-				dataType:"json",
-				url:url,
-				data:{
-					id:id,
-					sort:sor
-				},
-				success:function(date){
-					if(date.status == 1){
-						layer.msg(date.msg,{icon:1,time:1000});
-						setTimeout(function(){
-							location.reload();
-						},400)
-					}else{
-						layer.msg(date.msg,{icon:2,time:1000});
-					}
-				}
-			});
-		})
-		
-		/**
 		 * 多条删除
 		 */
-		$(".batchDel").click(function(){
+		$(".newsAdd_btn").click(function(){
 			var checkedList = new Array();   
 			$("input[name='check']:checked").each(function() {   
 			    checkedList.push($(this).val());   
 			})
 			var id = checkedList.join(',');
-			var url = $(this).attr("data-url");
+			var url = $(this).attr("data-href");
 			layer.open({
-				content: '您正在进行删除操作，是否确认?',
-				icon : 3,
+				content: '您正在进行幻灯片操作，是否确认?',
+				icon : 0,
 				yes: function(layero, index){
 				    $.ajax({
 						type:"post",
 						dataType:"json",
 						url:url,
 						data:{
-							id:id
+							img:id
 						},
 						success:function(date){
 							if(date.status == 1){
 								layer.msg(date.msg,{icon:1,time:1000});
 								setTimeout(function(){
 									location.reload();
-								},400)
+								},1000)
 							}else{
 								layer.msg(date.msg,{icon:2,time:1000});
 							}
