--- a/application/index/view/index/build.html
+++ b/application/index/view/index/build.html
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0,viewport-fit=cover">
 		<title>捌零映像设计机构-施工档案</title>
+		<meta name="referrer" content="never">
 		<script src="__STYLE__/jquery-3.2.1/jquery-3.2.1.min.js"></script>
 		<link href="__STYLE__/css/index.css" rel="stylesheet" type="text/css" />
 	</head>
